--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                         <li><a href="">Sobre</a></li>
                         <li><a href="">Projetos</a></li>
                         <li><a href="" class="menu-buttom">Contato</a></li>
-                        <li><a href=""><i class="fa fa-github"aria-hidden="true"></i></a></li>
-                        <li><a href=""><i class="fa fa-linkedin-square"aria-hidden="true"></i></a></li>
+                        <li><a href="https://github.com/DavidAugustoo" target="_blank"><i class="fa fa-github"aria-hidden="true"></i></a></li>
+                        <li><a href="https://www.linkedin.com/in/davidaugustoo/" target="_blank"><i class="fa fa-linkedin-square"aria-hidden="true"></i></a></li>
                     </ul>
                 </nav>
             </div>
