:sparkles: feat: estrutura da section banner

--- a/index.html
+++ b/index.html
@@ -30,5 +30,27 @@
             </div>
         </div>
     </header>
+
+    <main>
+        <section id="banner">
+            <div class="container">
+                <div class="banner">
+                    <div class="banner-esquerda">
+                        <p>Olá Mundo! <span>&#128075</span> Meu nome é David</p>
+                        <h1>David Augusto</h1>
+                        <h2>Desenvolvedor</h2>
+                        <p>Programador Front-end com foco no ecossistema do JavaScript. Atualmente cursando tecnólogo Análise e Desenvolvimento de Sistemas.</p>
+                        <a href="">Saiba mais</a>
+                    </div>
+                    <div class="banner-direita">
+                        <img src="./assets/images/avatar.png" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="icone-rolagem">
+               <img src="./assets/images/mouse.png" alt="">
+            </div>
+        </section>
+    </main>
 </body>
 </html>
