--- a/index.html
+++ b/index.html
@@ -51,6 +51,21 @@
                <img src="./assets/images/mouse.png" alt="">
             </div>
         </section>
+
+        <section id="sobre-mim">
+            <div class="container">
+                <div class="sobre-mim">
+                    <div class="sobre-mim-esquerda">
+                        <img src="./assets/images/david.png">
+                    </div>
+                    <div class="sobre-mim-direita">
+                        <p>Quem sou eu</p>
+                        <h1>Sobre mim</h1>
+                        <p>Apaixonado por tecnologia, fui apresentado ao desenvolvimento web e mobile. Desde então, sigo estudando e desenvolvendo projetos, a fim de dominar o ecossistema das linguagens Dart e JavaScript. Sempre buscando criar soluções combinando design e interatividade para uma melhor experiência do usuário. </br></br>Sou fascinado por resolução de problemas, principalmente utilizando tecnologias que envolvem web e mobile. Atualmente cursando Análise e Desenvolvimento de Sistemas na FIAP.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
