:sparkles: feat: botão Download CV adicionado na section sobre mim

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <h1>David Augusto</h1>
                         <h2>Desenvolvedor</h2>
                         <p>Programador Front-end com foco no ecossistema do JavaScript. Atualmente cursando tecnólogo Análise e Desenvolvimento de Sistemas.</p>
-                        <a href="">Saiba mais</a>
+                        <a href="" class="buttom">Saiba mais</a>
                     </div>
                     <div class="banner-direita">
                         <img src="./assets/images/avatar.png" alt="">
@@ -62,6 +62,7 @@
                         <p>Quem sou eu</p>
                         <h1>Sobre mim</h1>
                         <p>Apaixonado por tecnologia, fui apresentado ao desenvolvimento web e mobile. Desde então, sigo estudando e desenvolvendo projetos, a fim de dominar o ecossistema das linguagens Dart e JavaScript. Sempre buscando criar soluções combinando design e interatividade para uma melhor experiência do usuário. </br></br>Sou fascinado por resolução de problemas, principalmente utilizando tecnologias que envolvem web e mobile. Atualmente cursando Análise e Desenvolvimento de Sistemas na FIAP.</p>
+                        <a href="" class="buttom">Download CV</a></li>
                     </div>
                 </div>
             </div>
