:sparkles: feat: estrutura da section conhecimentos

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                     <ul>
                         <li><a href="">Home</a></li>
                         <li><a href="">Sobre</a></li>
+                        <li><a href="">Conhecimentos</a></li>
                         <li><a href="">Projetos</a></li>
                         <li><a href="" class="menu-buttom">Contato</a></li>
                         <li><a href="https://github.com/DavidAugustoo" target="_blank"><i class="fa fa-github"aria-hidden="true"></i></a></li>
@@ -59,14 +60,50 @@
                         <img src="./assets/images/david.png">
                     </div>
                     <div class="sobre-mim-direita">
-                        <p>Quem sou eu</p>
-                        <h1>Sobre mim</h1>
+                        <div class="titulo">
+                            <p>Quem sou eu</p>
+                            <h1>Sobre mim</h1>
+                        </div>
                         <p>Apaixonado por tecnologia, fui apresentado ao desenvolvimento web e mobile. Desde então, sigo estudando e desenvolvendo projetos, a fim de dominar o ecossistema das linguagens Dart e JavaScript. Sempre buscando criar soluções combinando design e interatividade para uma melhor experiência do usuário. </br></br>Sou fascinado por resolução de problemas, principalmente utilizando tecnologias que envolvem web e mobile. Atualmente cursando Análise e Desenvolvimento de Sistemas na FIAP.</p>
                         <a href="" class="buttom">Download CV</a></li>
                     </div>
                 </div>
             </div>
         </section>
+
+        <section id="conhecimentos">
+            <div class="container">
+                <div class="conhecimentos">
+                    <div class="titulo">
+                        <p>O que eu sei</p>
+                        <h1>Conhecimentos</h1>
+                    </div>
+                    <div class="conhecimentos-cards">
+                        <div class="card">
+                            <div class="card-area">
+                                <img src="assets/images/html_icon.png">
+                            <h2>HTML</h2>
+                            <p>HTMl é uma linguagem de marcação utilizada na construção de páginas na Web. Documentos HTML podem ser interpretados por navegadores.</p>
+                            </div>            
+                        </div>
+                        <div class="card">
+                            <div class="card-area">
+                                <img src="assets/images/css_icon.png">
+                            <h2>CSS</h2>
+                            <p>O CSS é uma linguagem de folhas de estilos que é utilizada para definir como os documentos escritos na linguagem de marcação HTML.</p>
+                            </div>   
+                        </div>
+                        <div class="card">
+                            <div class="card-area">
+                                <img src="assets/images/js_icon.png">
+                            <h2>Javascript</h2>
+                            <p>JavaScript é uma linguagem de programação interpretada estruturada, de script em alto nível com tipagem dinâmica fraca e multiparadigma.</p>
+                            </div>   
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>  
     </main>
 </body>
 </html>
