:sparkles: feat: estrutura da section projetos

--- a/index.html
+++ b/index.html
@@ -104,6 +104,62 @@
                 </div>
             </div>
         </section>  
+
+
+        <section id="projetos">
+            <div class="container">
+                <div class="projetos">
+                    <div class="titulo">
+                        <p>Meus projetos</p>
+                        <h1>Projetos</h1>
+                    </div>
+                    <div class="projetos-cards">
+                        <div class="projetos-card">
+                            <img src="./assets/images/projeto1.png" alt="">
+                            <div class="projeto-card-desc">
+                                <div class="projeto-card-desc-esquerda">
+                                    <h2>Criação salas de Q&A ao-vivo</h2>
+                                    <div class="projeto-card-desc-categorias">
+                                        <div class="projeto-card-desc-categoria">HTML</div>
+                                        <div class="projeto-card-desc-categoria">CSS</div>
+                                        <div class="projeto-card-desc-categoria">Javascript</div>
+                                    </div>
+                                </div>
+                                <div class="projeto-card-desc-direita"><p>Letmeask é perfeito para criadores de conteúdo criarem salas de perguntas e respostas de uma forma muito organizada e democrática. </p></div>
+                            </div> 
+                        </div>
+                        <div class="projetos-card">
+                            <img src="./assets/images/projeto1.png" alt="">
+                            <div class="projeto-card-desc">
+                                <div class="projeto-card-desc-esquerda">
+                                    <h2>Criação salas de Q&A ao-vivo</h2>
+                                    <div class="projeto-card-desc-categorias">
+                                        <div class="projeto-card-desc-categoria">HTML</div>
+                                        <div class="projeto-card-desc-categoria">CSS</div>
+                                        <div class="projeto-card-desc-categoria">Javascript</div>
+                                    </div>
+                                </div>
+                                <div class="projeto-card-desc-direita"><p>Letmeask é perfeito para criadores de conteúdo criarem salas de perguntas e respostas de uma forma muito organizada e democrática. </p></div>
+                            </div> 
+                        </div>
+                        <div class="projetos-card">
+                            <img src="./assets/images/projeto1.png" alt="">
+                            <div class="projeto-card-desc">
+                                <div class="projeto-card-desc-esquerda">
+                                    <h2>Criação salas de Q&A ao-vivo</h2>
+                                    <div class="projeto-card-desc-categorias">
+                                        <div class="projeto-card-desc-categoria">HTML</div>
+                                        <div class="projeto-card-desc-categoria">CSS</div>
+                                        <div class="projeto-card-desc-categoria">Javascript</div>
+                                    </div>
+                                </div>
+                                <div class="projeto-card-desc-direita"><p>Letmeask é perfeito para criadores de conteúdo criarem salas de perguntas e respostas de uma forma muito organizada e democrática. </p></div>
+                            </div> 
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
