:ok_hand: refactor: resposividade nos elementos

--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <script src="https://kit.fontawesome.com/276b4bee9e.js" crossorigin="anonymous"></script>
     <title>David Augusto</title>
+
+    <script type="text/javascript">
+        window.onload = function() {
+            document.querySelector(".menu_mobile").addEventListener("click", function(){
+                if(document.querySelector(".menu nav ul").style.display == "flex") {
+                    document.querySelector(".menu nav ul").style.display = "none";
+                } else {
+                    document.querySelector(".menu nav ul").style.display = "flex";
+                }
+            });
+        };
+    </script>
 </head>
 <body>
     <header>
@@ -18,6 +30,11 @@
             <div class="logo"><img src="./assets/images/logo.png" alt=""></div>
             <div class="menu">
                 <nav>
+                    <div class="menu_mobile">
+                        <div class="mm_line"></div>
+                        <div class="mm_line"></div>
+                        <div class="mm_line"></div>
+                    </div>
                     <ul>
                         <li><a href="">Home</a></li>
                         <li><a href="">Sobre</a></li>
