:bug: fix: correção de bugs visuais na section projetos

--- a/index.html
+++ b/index.html
@@ -135,11 +135,10 @@
                             <img src="./assets/images/projeto1.png" alt="">
                             <div class="projeto-card-desc">
                                 <div class="projeto-card-desc-esquerda">
-                                    <h2>Criação salas de Q&A ao-vivo</h2>
+                                    <h2>MediCenter</h2>
                                     <div class="projeto-card-desc-categorias">
-                                        <div class="projeto-card-desc-categoria">HTML</div>
-                                        <div class="projeto-card-desc-categoria">CSS</div>
-                                        <div class="projeto-card-desc-categoria">Javascript</div>
+                                        <div class="projeto-card-desc-categoria html">HTML</div>
+                                        <div class="projeto-card-desc-categoria css">CSS</div>
                                     </div>
                                 </div>
                                 <div class="projeto-card-desc-direita"><p>Letmeask é perfeito para criadores de conteúdo criarem salas de perguntas e respostas de uma forma muito organizada e democrática. </p></div>
@@ -151,9 +150,8 @@
                                 <div class="projeto-card-desc-esquerda">
                                     <h2>Criação salas de Q&A ao-vivo</h2>
                                     <div class="projeto-card-desc-categorias">
-                                        <div class="projeto-card-desc-categoria">HTML</div>
-                                        <div class="projeto-card-desc-categoria">CSS</div>
-                                        <div class="projeto-card-desc-categoria">Javascript</div>
+                                        <div class="projeto-card-desc-categoria html">HTML</div>
+                                        <div class="projeto-card-desc-categoria css">CSS</div>
                                     </div>
                                 </div>
                                 <div class="projeto-card-desc-direita"><p>Letmeask é perfeito para criadores de conteúdo criarem salas de perguntas e respostas de uma forma muito organizada e democrática. </p></div>
