--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="shortcut icon" href="./assets/images/favicon.svg" />
     <script src="https://kit.fontawesome.com/276b4bee9e.js" crossorigin="anonymous"></script>
     <title>David Augusto</title>
 
@@ -92,7 +93,7 @@
             <div class="container">
                 <div class="conhecimentos">
                     <div class="titulo">
-                        <p>O que eu sei</p>
+                        <p>O que estou estudando</p>
                         <h1>Conhecimentos</h1>
                     </div>
                     <div class="conhecimentos-cards">
@@ -117,6 +118,21 @@
                             <p>JavaScript é uma linguagem de programação interpretada estruturada, de script em alto nível com tipagem dinâmica fraca e multiparadigma.</p>
                             </div>   
                         </div>
+                        <div class="card">
+                            <div class="card-area">
+                                <img src="assets/images/flutter_icon.png">
+                            <h2>Flutter</h2>
+                            <p>Flutter é um kit de desenvolvimento de interface de usuário, de código aberto, criado pela empresa Google em 2015, baseado na linguagem de programação Dart.</p>
+                            </div>   
+                        </div>
+
+                        <div class="card desativado"> 
+                        </div>
+
+                        <div class="card desativado">
+                            
+                            </div>   
+                        </div>
                     </div>
                 </div>
             </div>
@@ -137,15 +153,14 @@
                                 <div class="projeto-card-desc-esquerda">
                                     <h2>MediCenter</h2>
                                     <div class="projeto-card-desc-categorias">
-                                        <div class="projeto-card-desc-categoria html">HTML</div>
-                                        <div class="projeto-card-desc-categoria css">CSS</div>
+                                        <div class="projeto-card-desc-categoria flutter">Flutter</div>
                                     </div>
                                 </div>
                                 <div class="projeto-card-desc-direita"><p>Letmeask é perfeito para criadores de conteúdo criarem salas de perguntas e respostas de uma forma muito organizada e democrática. </p></div>
                             </div> 
                         </div>
                         <div class="projetos-card">
-                            <img src="./assets/images/projeto1.png" alt="">
+                            <img src="./assets/images/projeto2.png" alt="">
                             <div class="projeto-card-desc">
                                 <div class="projeto-card-desc-esquerda">
                                     <h2>Criação salas de Q&A ao-vivo</h2>
@@ -158,14 +173,13 @@
                             </div> 
                         </div>
                         <div class="projetos-card">
-                            <img src="./assets/images/projeto1.png" alt="">
+                            <img src="./assets/images/projeto3.png" alt="">
                             <div class="projeto-card-desc">
                                 <div class="projeto-card-desc-esquerda">
                                     <h2>Criação salas de Q&A ao-vivo</h2>
                                     <div class="projeto-card-desc-categorias">
-                                        <div class="projeto-card-desc-categoria">HTML</div>
-                                        <div class="projeto-card-desc-categoria">CSS</div>
-                                        <div class="projeto-card-desc-categoria">Javascript</div>
+                                        <div class="projeto-card-desc-categoria html">HTML</div>
+                                        <div class="projeto-card-desc-categoria css">CSS</div>
                                     </div>
                                 </div>
                                 <div class="projeto-card-desc-direita"><p>Letmeask é perfeito para criadores de conteúdo criarem salas de perguntas e respostas de uma forma muito organizada e democrática. </p></div>
