:pencil: docs: atualização de conteúdo

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </script>
 </head>
 <body>
-    <header>
+    <header id="header">
         <div class="container">
             <div class="logo"><img src="./assets/images/logo.png" alt=""></div>
             <div class="menu">
@@ -37,10 +37,10 @@
                         <div class="mm_line"></div>
                     </div>
                     <ul>
-                        <li><a href="">Home</a></li>
-                        <li><a href="">Sobre</a></li>
-                        <li><a href="">Conhecimentos</a></li>
-                        <li><a href="">Projetos</a></li>
+                        <li><a href="#header">Home</a></li>
+                        <li><a href="#sobre-mim">Sobre</a></li>
+                        <li><a href="#conhecimentos">Conhecimentos</a></li>
+                        <li><a href="#projetos">Projetos</a></li>
                         <li><a href="" class="menu-buttom">Contato</a></li>
                         <li><a href="https://github.com/DavidAugustoo" target="_blank"><i class="fa fa-github"aria-hidden="true"></i></a></li>
                         <li><a href="https://www.linkedin.com/in/davidaugustoo/" target="_blank"><i class="fa fa-linkedin-square"aria-hidden="true"></i></a></li>
@@ -59,7 +59,7 @@
                         <h1>David Augusto</h1>
                         <h2>Desenvolvedor</h2>
                         <p>Programador Front-end com foco no ecossistema do JavaScript. Atualmente cursando tecnólogo Análise e Desenvolvimento de Sistemas.</p>
-                        <a href="" class="buttom">Saiba mais</a>
+                        <a href="#sobre-mim" class="buttom">Saiba mais</a>
                     </div>
                     <div class="banner-direita">
                         <img src="./assets/images/avatar.png" alt="">
@@ -83,7 +83,7 @@
                             <h1>Sobre mim</h1>
                         </div>
                         <p>Apaixonado por tecnologia, fui apresentado ao desenvolvimento web e mobile. Desde então, sigo estudando e desenvolvendo projetos, a fim de dominar o ecossistema das linguagens Dart e JavaScript. Sempre buscando criar soluções combinando design e interatividade para uma melhor experiência do usuário. </br></br>Sou fascinado por resolução de problemas, principalmente utilizando tecnologias que envolvem web e mobile. Atualmente cursando Análise e Desenvolvimento de Sistemas na FIAP.</p>
-                        <a href="" class="buttom">Download CV</a></li>
+                        <a href="https://drive.google.com/file/d/1o81RI0UIOfB5SPhmWZQwQgHVqVN_ykaI/view?usp=sharing" target="_blank" class="buttom">Download CV</a></li>
                     </div>
                 </div>
             </div>
@@ -151,38 +151,55 @@
                             <img src="./assets/images/projeto1.png" alt="">
                             <div class="projeto-card-desc">
                                 <div class="projeto-card-desc-esquerda">
-                                    <h2>MediCenter</h2>
+                                    <h2>Cicle</h2>
                                     <div class="projeto-card-desc-categorias">
                                         <div class="projeto-card-desc-categoria flutter">Flutter</div>
                                     </div>
                                 </div>
-                                <div class="projeto-card-desc-direita"><p> teste Letmeask é perfeito para criadores de conteúdo criarem salas de perguntas e respostas de uma forma muito organizada e democrática. </p></div>
+                                <div class="projeto-card-desc-direita">
+                                    <p> Cicle é uma startup que permite vender materiais reciclados com facilidade, descartando aquilo que não se é usado por um preço justo.</p>
+                                    <div class="projeto-card-desc-direita-icons">
+                                        <a href="https://github.com/DavidAugustoo/Cicle" target="_blank"><i class="fab fa-github"></i></a>
+                                    </div>
+                                </div>
                             </div> 
                         </div>
                         <div class="projetos-card">
                             <img src="./assets/images/projeto2.png" alt="">
                             <div class="projeto-card-desc">
                                 <div class="projeto-card-desc-esquerda">
-                                    <h2>Criação salas de Q&A ao-vivo</h2>
+                                    <h2>MediCenter</h2>
                                     <div class="projeto-card-desc-categorias">
                                         <div class="projeto-card-desc-categoria html">HTML</div>
                                         <div class="projeto-card-desc-categoria css">CSS</div>
                                     </div>
                                 </div>
-                                <div class="projeto-card-desc-direita"><p>Letmeask é perfeito para criadores de conteúdo criarem salas de perguntas e respostas de uma forma muito organizada e democrática. </p></div>
+                                <div class="projeto-card-desc-direita">
+                                    <p>Landing page dedicado a instituições médicas e de saúde, clínicas e hospitais, médicos e todos os outros envolvidos em serviços de saúde.</p>
+                                    <div class="projeto-card-desc-direita-icons">
+                                        <a href="https://github.com/DavidAugustoo/MediCenter" target="_blank"><i class="fab fa-github"></i></a>
+                                        <a href="https://davidaugustoo.github.io/MediCenter/" target="_blank"><i class="fas fa-link"></i></a>
+                                    </div>
+                                </div>
                             </div> 
                         </div>
                         <div class="projetos-card">
                             <img src="./assets/images/projeto3.png" alt="">
                             <div class="projeto-card-desc">
                                 <div class="projeto-card-desc-esquerda">
-                                    <h2>Criação salas de Q&A ao-vivo</h2>
+                                    <h2>Awax</h2>
                                     <div class="projeto-card-desc-categorias">
                                         <div class="projeto-card-desc-categoria html">HTML</div>
                                         <div class="projeto-card-desc-categoria css">CSS</div>
                                     </div>
                                 </div>
-                                <div class="projeto-card-desc-direita"><p>Letmeask é perfeito para criadores de conteúdo criarem salas de perguntas e respostas de uma forma muito organizada e democrática. </p></div>
+                                <div class="projeto-card-desc-direita">
+                                    <p>Landing page voltada para agências de comunicação visual, marketing e fotografia.</p>
+                                    <div class="projeto-card-desc-direita-icons">
+                                        <a href="https://github.com/DavidAugustoo/Awax" target="_blank"><i class="fab fa-github"></i></a>
+                                        <a href="https://davidaugustoo.github.io/Awax/" target="_blank"><i class="fas fa-link"></i></a>
+                                    </div>
+                                </div>
                             </div> 
                         </div>
                     </div>
