:pencil: atualizando conteúdos e links

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <li><a href="#sobre-mim">Sobre</a></li>
                         <li><a href="#conhecimentos">Conhecimentos</a></li>
                         <li><a href="#projetos">Projetos</a></li>
-                        <li><a href="" class="menu-buttom">Contato</a></li>
+                        <li><a href="mailto:davidribeiro086@gmail.com" class="menu-buttom">Contato</a></li>
                         <li><a href="https://github.com/DavidAugustoo" target="_blank"><i class="fa fa-github"aria-hidden="true"></i></a></li>
                         <li><a href="https://www.linkedin.com/in/davidaugustoo/" target="_blank"><i class="fa fa-linkedin-square"aria-hidden="true"></i></a></li>
                     </ul>
