:pencil: docs: README adicionado

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <p>Olá Mundo! <span>&#128075</span> Meu nome é David</p>
                         <h1>David Augusto</h1>
                         <h2>Desenvolvedor</h2>
-                        <p>Programador Front-end com foco no ecossistema do JavaScript. Atualmente cursando tecnólogo Análise e Desenvolvimento de Sistemas.</p>
+                        <p>Programador Front-end com foco no ecossistema do JavaScript.</p>
                         <a href="#sobre-mim" class="buttom">Saiba mais</a>
                     </div>
                     <div class="banner-direita">
