:recycle: refactor: section projetos

--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="shortcut icon" href="./assets/images/favicon.svg" />
-    <script src="https://kit.fontawesome.com/276b4bee9e.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/ef2c46f17f.js" crossorigin="anonymous"></script>
     <title>David Augusto</title>
 
     <script type="text/javascript">
@@ -148,7 +147,7 @@
                     </div>
                     <div class="projetos-cards">
                         <div class="projetos-card">
-                            <img src="./assets/images/projeto1.png" alt="">
+                            <img src="./assets/images/cicle.png" alt="">
                             <div class="projeto-card-desc">
                                 <div class="projeto-card-desc-esquerda">
                                     <h2>Cicle</h2>
@@ -165,7 +164,27 @@
                             </div> 
                         </div>
                         <div class="projetos-card">
-                            <img src="./assets/images/projeto2.png" alt="">
+                            <img src="./assets/images/petfood.png" alt="">
+                            <div class="projeto-card-desc">
+                                <div class="projeto-card-desc-esquerda">
+                                    <h2>PetFood</h2>
+                                    <div class="projeto-card-desc-categorias">
+                                        <div class="projeto-card-desc-categoria html">HTML</div>
+                                        <div class="projeto-card-desc-categoria css">CSS</div>
+                                        <div class="projeto-card-desc-categoria javascript">JavaScript</div>
+                                    </div>  
+                                </div>
+                                <div class="projeto-card-desc-direita">
+                                    <p> PetFood é um e-commerce totalmente voltado para o ramo de animais de estimação                                    </p>
+                                    <div class="projeto-card-desc-direita-icons">
+                                        <a href="https://github.com/DavidAugustoo/PetFood" target="_blank"><i class="fab fa-github"></i></a>
+                                        <a href="https://petfoood.netlify.app/" target="_blank"><i class="fas fa-link"></i></a>
+                                    </div>
+                                </div>
+                            </div> 
+                        </div>
+                        <div class="projetos-card">
+                            <img src="./assets/images/medicenter.png" alt="">
                             <div class="projeto-card-desc">
                                 <div class="projeto-card-desc-esquerda">
                                     <h2>MediCenter</h2>
@@ -184,7 +203,7 @@
                             </div> 
                         </div>
                         <div class="projetos-card">
-                            <img src="./assets/images/projeto3.png" alt="">
+                            <img src="./assets/images/awax.png" alt="">
                             <div class="projeto-card-desc">
                                 <div class="projeto-card-desc-esquerda">
                                     <h2>Awax</h2>
