projeto FreePlay adicionado

--- a/index.html
+++ b/index.html
@@ -184,6 +184,26 @@
                             </div> 
                         </div>
                         <div class="projetos-card">
+                            <img src="./assets/images/freeplay.png" alt="">
+                            <div class="projeto-card-desc">
+                                <div class="projeto-card-desc-esquerda">
+                                    <h2>Freeplay</h2>
+                                    <div class="projeto-card-desc-categorias">
+                                        <div class="projeto-card-desc-categoria html">HTML</div>
+                                        <div class="projeto-card-desc-categoria css">CSS</div>
+                                        <div class="projeto-card-desc-categoria javascript">JavaScript</div>
+                                    </div>  
+                                </div>
+                                <div class="projeto-card-desc-direita">
+                                    <p> FreePlay é um ótimo site para encontrar jogos novos, divertidos e gratuitos para jogar com seus amigos.</p>
+                                    <div class="projeto-card-desc-direita-icons">
+                                        <a href="https://github.com/DavidAugustoo/FreePlay" target="_blank"><i class="fab fa-github"></i></a>
+                                        <a href="https://freeplayy.netlify.app/" target="_blank"><i class="fas fa-link"></i></a>
+                                    </div>
+                                </div>
+                            </div> 
+                        </div>
+                        <div class="projetos-card">
                             <img src="./assets/images/medicenter.png" alt="">
                             <div class="projeto-card-desc">
                                 <div class="projeto-card-desc-esquerda">
