projeto EnglishChat adicionado

--- a/index.html
+++ b/index.html
@@ -137,7 +137,6 @@
             </div>
         </section>  
 
-
         <section id="projetos">
             <div class="container">
                 <div class="projetos">
@@ -159,6 +158,24 @@
                                     <p> Cicle é uma startup que permite vender materiais reciclados com facilidade, descartando aquilo que não se é usado por um preço justo.</p>
                                     <div class="projeto-card-desc-direita-icons">
                                         <a href="https://github.com/DavidAugustoo/Cicle" target="_blank"><i class="fab fa-github"></i></a>
+                                    </div>
+                                </div>
+                            </div> 
+                        </div>
+                        <div class="projetos-card">
+                            <img src="./assets/images/englishchat.png" alt="">
+                            <div class="projeto-card-desc">
+                                <div class="projeto-card-desc-esquerda">
+                                    <h2>EnglishChat</h2>
+                                    <div class="projeto-card-desc-categorias">
+                                        <div class="projeto-card-desc-categoria node">Nodejs</div>
+                                    </div>  
+                                </div>
+                                <div class="projeto-card-desc-direita">
+                                    <p> English chat é uma ótima plataforma para praticar inglês com falantes da língua e fazer novos amigos.                                   </p>
+                                    <div class="projeto-card-desc-direita-icons">
+                                        <a href="https://github.com/DavidAugustoo/EnglishChat" target="_blank"><i class="fab fa-github"></i></a>
+                                        <a href="https://englishchat.herokuapp.com/" target="_blank"><i class="fas fa-link"></i></a>
                                     </div>
                                 </div>
                             </div> 
