novas tecnologias adicionadas

--- a/index.html
+++ b/index.html
@@ -119,18 +119,27 @@
                         </div>
                         <div class="card">
                             <div class="card-area">
-                                <img src="assets/images/flutter_icon.png">
-                            <h2>Flutter</h2>
-                            <p>Flutter é um kit de desenvolvimento de interface de usuário, de código aberto, criado pela empresa Google em 2015, baseado na linguagem de programação Dart.</p>
+                                <img src="assets/images/typescript_icon.png">
+                            <h2>Typescript</h2>
+                            <p>TypeScript é uma linguagem de programação de código aberto desenvolvida pela Microsoft. É um superconjunto sintático estrito de JavaScript e adiciona tipagem estática opcional à linguagem.</p>
                             </div>   
                         </div>
 
-                        <div class="card desativado"> 
+                        <div class="card">
+                            <div class="card-area">
+                                <img src="assets/images/node_icon.png">
+                            <h2>Node.js</h2>
+                            <p>Node.js é um software de código aberto, multiplataforma, baseado no interpretador V8 do Google e que permite a execução de códigos JavaScript fora de um navegador web.</p>
+                            </div>   
                         </div>
 
-                        <div class="card desativado">
-                            
+                        <div class="card">
+                            <div class="card-area">
+                                <img src="assets/images/react_icon.png">
+                            <h2>React.js</h2>
+                            <p>O React é uma biblioteca JavaScript de código aberto com foco em criar interfaces de usuário em páginas web. É mantido pelo Facebook.</p>
                             </div>   
+                        </div>  
                         </div>
                     </div>
                 </div>
