--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <p>Olá Mundo! <span>&#128075</span> Meu nome é David</p>
                         <h1>David Augusto</h1>
                         <h2>Desenvolvedor</h2>
-                        <p>Programador Front-end com foco no ecossistema do JavaScript.</p>
+                        <p>Programador Full Stack com foco no ecossistema do JavaScript.</p>
                         <a href="#sobre-mim" class="buttom">Saiba mais</a>
                     </div>
                     <div class="banner-direita">
@@ -154,6 +154,25 @@
                         <h1>Projetos</h1>
                     </div>
                     <div class="projetos-cards">
+                        <div class="projetos-card">
+                            <img src="./assets/images/codify.png" alt="">
+                            <div class="projeto-card-desc">
+                                <div class="projeto-card-desc-esquerda">
+                                    <h2>Codify</h2>
+                                    <div class="projeto-card-desc-categorias">
+                                        <div class="projeto-card-desc-categoria react">React</div>
+                                        <div class="projeto-card-desc-categoria java">Java</div>
+                                    </div>  
+                                </div>
+                                <div class="projeto-card-desc-direita">
+                                    <p>A Codify visa preparar candidatos para o mercado de trabalho, fornecendo materiais, exercícios e testes técnicos usados por empresas em seus processos seletivos</p>
+                                    <div class="projeto-card-desc-direita-icons">
+                                        <a href="https://www.linkedin.com/posts/davidaugustoo_ibmchallenge-fiap-codify-activity-6934274371674861568-0sV5?utm_source=linkedin_share&utm_medium=member_desktop_web" target="_blank"><i class="fa fa-linkedin-square"></i></a>
+                                        <a href="https://codifyy.tech/" target="_blank"><i class="fas fa-link"></i></a>
+                                    </div>
+                                </div>
+                            </div> 
+                        </div>
                         <div class="projetos-card">
                             <img src="./assets/images/cicle.png" alt="">
                             <div class="projeto-card-desc">
