--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
                             <p>Quem sou eu</p>
                             <h1>Sobre mim</h1>
                         </div>
-                        <p>Apaixonado por tecnologia, fui apresentado ao desenvolvimento web e mobile. Desde então, sigo estudando e desenvolvendo projetos, a fim de dominar o ecossistema das linguagens Dart e JavaScript. Sempre buscando criar soluções combinando design e interatividade para uma melhor experiência do usuário. </br></br>Sou fascinado por resolução de problemas, principalmente utilizando tecnologias que envolvem web e mobile. Atualmente cursando Análise e Desenvolvimento de Sistemas na FIAP.</p>
-                        <a href="https://drive.google.com/file/d/1WH_WHC4H2p8X6JC_18sDieDgTiHk8g_I/view?usp=sharing" target="_blank" class="buttom">Download CV</a></li>
+                        <p>Formado técnico em Informática e atualmente cursando um tecnólogo em Análise e Desenvolvimento de Sistemas. Meu foco é o desenvolvimento web com HTML, CSS, JavaScript, React e Node. Além da aplicação de metodologias ágeis, como SCRUM.</br></br>Estou sempre em constante aprendizado, adoro me aventurar em assuntos desconhecidos e variados. Sinta-se livre para me acompanhar e entrar em contato comigo! 🚀</p>
+                        <a href="https://drive.google.com/file/d/1eP9i32JtmFEqVS8OwmRRUf1aFlQwApeh/view?usp=sharing" target="_blank" class="buttom">Download CV</a></li>
                     </div>
                 </div>
             </div>
