--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                                     </div>  
                                 </div>
                                 <div class="projeto-card-desc-direita">
-                                    <p>A Codify visa preparar candidatos para o mercado de trabalho, fornecendo materiais, exercícios e testes técnicos usados por empresas em seus processos seletivos</p>
+                                    <p>A Codify visa preparar candidatos para o mercado de trabalho, fornecendo materiais, exercícios e testes técnicos usados por empresas em seus processos seletivos.</p>
                                     <div class="projeto-card-desc-direita-icons">
                                         <a href="https://www.linkedin.com/posts/davidaugustoo_ibmchallenge-fiap-codify-activity-6934274371674861568-0sV5?utm_source=linkedin_share&utm_medium=member_desktop_web" target="_blank"><i class="fa fa-linkedin-square"></i></a>
                                         <a href="https://codifyy.tech/" target="_blank"><i class="fas fa-link"></i></a>
@@ -197,6 +197,8 @@
                                     <h2>EnglishChat</h2>
                                     <div class="projeto-card-desc-categorias">
                                         <div class="projeto-card-desc-categoria node">Nodejs</div>
+                                        <div class="projeto-card-desc-categoria express">Express</div>
+                                        <div class="projeto-card-desc-categoria typescript">Typescript</div>
                                     </div>  
                                 </div>
                                 <div class="projeto-card-desc-direita">
@@ -220,7 +222,7 @@
                                     </div>  
                                 </div>
                                 <div class="projeto-card-desc-direita">
-                                    <p> PetFood é um e-commerce totalmente voltado para o ramo de animais de estimação                                    </p>
+                                    <p> PetFood é um e-commerce totalmente voltado para o ramo de animais de estimação.</p>
                                     <div class="projeto-card-desc-direita-icons">
                                         <a href="https://github.com/DavidAugustoo/PetFood" target="_blank"><i class="fab fa-github"></i></a>
                                         <a href="https://petfoood.netlify.app/" target="_blank"><i class="fas fa-link"></i></a>
